There's a bug in Safari with flex-wrap and bootstrap row. The fix was to add this in a nested css for the homepage, .row [class*=col-]{margin:0 -.3px;}

--- a/style.css
+++ b/style.css
@@ -1284,6 +1284,11 @@ nav a {
 .homepage .mobile-quotes {
   display: none;
 }
+@media (min-width: 768px) {
+  .homepage .row [class*=col-] {
+    margin: 0 -0.3px;
+  }
+}
 .homepage .yellow {
   background-color: #EBBC4E;
   margin-bottom: 0 !important;
